--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,66 @@
         .social a:hover {
             transform: translateY(-5px);
         }
+        /* Estilo do botão de alternância */
+        .toggle-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        
+        .toggle-label {
+            font-size: 16px;
+            color: #ffffff;
+            margin: 0 10px;
+        }
+        
+        /* Estilos para o toggle switch */
+        .toggle-switch {
+            position: relative;
+            width: 50px;
+            height: 26px;
+            display: flex;
+        }
+        
+        .toggle-switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+        
+        .slider {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            border-radius: 34px;
+            transition: 0.4s;
+            cursor: pointer;
+        }
+        
+        .slider::before {
+            position: absolute;
+            content: "";
+            height: 20px;
+            width: 20px;
+            left: 3px;
+            bottom: 3px;
+            background-color: white;
+            border-radius: 50%;
+            transition: 0.4s;
+        }
+        
+        input:checked + .slider {
+            background-color: #1844bd;
+        }
+        
+        input:checked + .slider::before {
+            transform: translateX(24px);
+            background-color: #ffffff;
+        }
+
         
         /* Container do nome e posição */
         .container {
