--- a/styles.css
+++ b/styles.css
@@ -488,6 +488,20 @@
             justify-content: center; /* Alinha o conteúdo horizontalmente no centro */
             align-items: center; /* Alinha o conteúdo verticalmente no centro */
         }
+                /* Adicione isso ao seu arquivo styles.css */
+        .hero-content h1, .hero-content p, .social a, .projects .project, .about-content img, .about-content p, .contact-section h1, .contact-section .nav {
+            visibility: hidden;
+            opacity: 0;
+            transition: all 0.8s ease-in-out;
+        }
+
+        /* Estilos de visibilidade e animação */
+        .animated {
+            visibility: visible !important;
+            opacity: 1 !important;
+            transform: none !important;
+        }
+
         
         .tech-icon img {
             width: 25px; /* Largura da imagem do ícone */
